# GroundStation

./: .gitignore  .gitmodules  Bugs.txt  CMakeCache.txt  CMakeLists.txt  GS.pro  README.md  commit.sh  map.html  missionplanning.cpp  szxkp5qe.v4r.txt  x  zgcshdel.qvt.txt
GS/: .qmake.stash  AckPacket.cpp  AckPacket.h  ActionPacket.cpp  CMakeLists.txt  InfoPacket.cpp  Makefile  Packet.cpp  Packet.h  Packet.pb.h  Resources.qrc  TelemetryPacket.cpp  UAV-Forge-New.pro  UAV-Forge-New.pro.k13076  UAV-Forge-New_BACKUP_3244.pro  UAV-Forge-New_BASE_3244.pro  ackpacket.h  actionpacket.h  connectiondialog.cpp  connectiondialog.h  database.cpp  database.h  dataobjects.cpp  dataobjects.h  dbmanager.cpp  dbmanager.h  dialog.h  digitalclock.cpp  digitalclock.h  flightpath.cpp  flightpath.h  graphwidget.cpp  graphwidget.h  graphwidget.ui  gsclient.cpp  gsclient.h  gscontrolpanel.cpp  gscontrolpanel.h  gscontrolpanel.ui  gsserver.cpp  (+87 more)
GS/GUI/: actionwidget.cpp  actionwidget.h  actionwidget.ui  chartwidget.cpp  chartwidget.h  clickableqlabel.cpp  clickableqlabel.h  connectionwidget.cpp  connectionwidget.h  connectionwidget.ui  customraisedbutton.cpp  customraisedbutton.h  flightpathwidget.cpp  flightpathwidget.h  flightpathwidget.ui  fzlayoutbox.cpp  fzlayoutbox.h  graphwidget.cpp  graphwidget.h  graphwidget.ui  gscontrolpanel.cpp  gscontrolpanel.h  imgreview.cpp  imgreview.h  imgreview.ui  imgwidget.cpp  imgwidget.h  imgwidget.ui  infowidget.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  maindockwindow.cpp  maindockwindow.h  maindockwindow.ui  mainmdidisplay.cpp  mainmdidisplay.h  mapvalidator.cpp  mapvalidator.h  mapwidget.cpp  (+57 more)
GS/Missions/: full_mission1.json  meow.json  obstacles.json  temp.json
GS/Network/: ActionPacket.cpp  ackpacket.h  actionpacket.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  gsserver.cpp  gsserver.h  interop.cpp  interop.h  link.cpp  link.h  messagebox.h  net.h  networklistener.cpp  networklistener.h  seriallink.cpp  seriallink.h  serverqueue.h  tcplink.cpp  tcplink.h  udplink.cpp  udplink.h  waypoint.cpp  waypoint.h  wyp.cpp  wyp.h
GS/Network_Ardo/: PacketHandler.h
GS/OLD GUI/: connectiondialog.h  dialog.ui  digitalclock.h  mainwindow.cpp  mapexecution.cpp  mapplanning.h  maprecap.ui  missionrecap.ui  options.ui  popwindowmp.cpp  popwindowmp.ui  videoplayer.cpp  videoplayer.h
GS/Util/: dataobjects.cpp  dataobjects.h  flightpath.cpp  flightpath.h  kmedoid.h  mission.cpp  mission.h  missionpath.cpp  missionpath.h  missionstatespace.h  obstacles.cpp  obstacles.h  plan_mission.cpp  plan_mission.hpp  point.hpp  rrt.cpp  rrt.h  stlastar.h  style.cpp  style.h  uav.cpp  uav.h  vect.h  waypt.cpp  (+3 more)
(+1948 files in other folders)
